--- a/posts/2025-10-20-겨울왕국.md
+++ b/posts/2025-10-20-겨울왕국.md
@@ -2,7 +2,7 @@
 title: "겨울왕국 - 가족 뮤지컬"
 date: 2025-10-20
 category: "뮤지컬"
-image: "/images/posts/frozen.jpg"
+image: "images/posts/frozen.jpg"
 venue: "블루스퀘어"
 period: "2025.12.01 - 2026.02.28"
 excerpt: "온 가족이 함께 즐길 수 있는 디즈니의 감동"
