--- a/posts/2025-10-25-시카고.md
+++ b/posts/2025-10-25-시카고.md
@@ -2,7 +2,7 @@
 title: "시카고 - 재즈와 범죄의 향연"
 date: 2025-10-25
 category: "뮤지컬"
-image: "/images/posts/chicago.jpg"
+image: "images/posts/chicago.jpg"
 venue: "디큐브아트센터"
 period: "2025.11.15 - 2026.02.28"
 excerpt: "1920년대 시카고를 배경으로 한 화려한 재즈 뮤지컬"
