--- a/posts/2025-10-28-오페라의유령.md
+++ b/posts/2025-10-28-오페라의유령.md
@@ -2,7 +2,7 @@
 title: "오페라의 유령 - 영원한 클래식"
 date: 2025-10-28
 category: "뮤지컬"
-image: "/images/posts/phantom.jpg"
+image: "images/posts/phantom.jpg"
 venue: "샬롯데씨어터"
 period: "2025.11.01 - 2026.01.31"
 excerpt: "앤드류 로이드 웨버의 불멸의 명작, 오페라의 유령이 다시 돌아왔습니다."
