--- a/collections/2025-10-30-연말추천공연.md
+++ b/collections/2025-10-30-연말추천공연.md
@@ -13,8 +13,10 @@ related_posts: ["post-001", "post-002", "post-007"]
 
 ## 🎭 뮤지컬 부문
 
-### 1. 오페라의 유령
+### 1. [오페라의 유령](post.html?id=2025-10-28-오페라의유령)
 **샬롯데씨어터 | 2025.11.01 - 2026.01.31**
+
+![오페라의 유령 포스터](images/posts/phantom.jpg)
 
 앤드류 로이드 웨버의 불멸의 명작. 웅장한 음악과 화려한 무대가 어우러진 최고의 뮤지컬입니다.
 
@@ -27,8 +29,10 @@ related_posts: ["post-001", "post-002", "post-007"]
 
 ---
 
-### 2. 시카고
+### 2. [시카고](post.html?id=2025-10-25-시카고)
 **디큐브아트센터 | 2025.11.15 - 2026.02.28**
+
+![시카고 포스터](images/posts/chicago.jpg)
 
 1920년대 시카고를 배경으로 한 재즈 뮤지컬. 중독성 있는 음악과 섹시한 안무가 매력적입니다.
 
@@ -41,8 +45,10 @@ related_posts: ["post-001", "post-002", "post-007"]
 
 ---
 
-### 3. 레미제라블
+### 3. [레미제라블](post.html?id=2025-10-29-레미제라블)
 **LG아트센터 | 2025.11.20 - 2026.03.31**
+
+![레미제라블 포스터](images/posts/les-miserables.jpg)
 
 빅토르 위고의 명작을 무대화한 대서사시. 감동적인 스토리와 웅장한 음악이 압권입니다.
 
@@ -55,8 +61,10 @@ related_posts: ["post-001", "post-002", "post-007"]
 
 ## 🎪 연극 부문
 
-### 4. 햄릿 - 현대적 재해석
+### 4. [햄릿 - 현대적 재해석](post.html?id=2025-10-30-햄릿)
 **대학로 예술마당 | 2025.11.05 - 2025.12.20**
+
+![햄릿 포스터](images/posts/hamlet.jpg)
 
 셰익스피어의 고전을 현대적 감각으로 재해석한 실험적 작품입니다.
 
@@ -67,8 +75,10 @@ related_posts: ["post-001", "post-002", "post-007"]
 
 ---
 
-### 5. 사랑의 불시착 - 연극 버전
+### 5. [사랑의 불시착 - 연극 버전](post.html?id=2025-10-31-사랑의불시착)
 **충무아트센터 | 2025.11.15 - 2026.01.15**
+
+![사랑의 불시착 포스터](images/posts/crash-landing.jpg)
 
 인기 드라마를 무대로 옮긴 로맨틱 코미디. 원작의 감동을 무대에서 재현합니다.
 
@@ -81,8 +91,10 @@ related_posts: ["post-001", "post-002", "post-007"]
 
 ## 🎵 클래식 & 콘서트
 
-### 6. 라흐마니노프 피아노 협주곡
+### 6. [라흐마니노프 피아노 협주곡](post.html?id=2025-11-01-라흐마니노프)
 **예술의전당 콘서트홀 | 2025.11.10**
+
+![라흐마니노프 콘서트 포스터](images/posts/rachmaninoff.jpg)
 
 세계적인 피아니스트가 선사하는 라흐마니노프의 감동. 클래식 입문자에게도 추천합니다.
 
@@ -95,8 +107,10 @@ related_posts: ["post-001", "post-002", "post-007"]
 
 ## 👨‍👩‍👧‍👦 가족 공연
 
-### 7. 겨울왕국
+### 7. [겨울왕국](post.html?id=2025-10-20-겨울왕국)
 **블루스퀘어 | 2025.12.01 - 2026.02.28**
+
+![겨울왕국 포스터](images/posts/frozen.jpg)
 
 디즈니의 대표작을 뮤지컬로 만나보세요. 온 가족이 함께 즐길 수 있는 최고의 공연입니다.
 
