--- a/collections/2025-10-27-대학로데이트.md
+++ b/collections/2025-10-27-대학로데이트.md
@@ -13,8 +13,10 @@ related_posts: ["post-003", "post-006", "post-008"]
 
 ## 🎭 추천 공연
 
-### 1. 햄릿 - 현대적 재해석
+### 1. [햄릿 - 현대적 재해석](post.html?id=2025-10-30-햄릿)
 **대학로 예술마당 | 2025.11.05 - 2025.12.20**
+
+![햄릿 포스터](images/posts/hamlet.jpg)
 
 셰익스피어의 고전을 현대적 감각으로 재해석한 작품. 깊이 있는 대화를 나누고 싶은 커플에게 추천합니다.
 
@@ -34,6 +36,8 @@ related_posts: ["post-003", "post-006", "post-008"]
 ### 2. 웃음의 대학
 **대학로 TOM | 2025.11.01 - 2026.01.31**
 
+![웃음의 대학 포스터](images/posts/laughter-university.jpg)
+
 스트레스를 날려버릴 유쾌한 코미디 연극. 편안하고 즐거운 데이트를 원하는 커플에게 완벽합니다.
 
 **데이트 포인트:**
@@ -48,8 +52,10 @@ related_posts: ["post-003", "post-006", "post-008"]
 
 ---
 
-### 3. 사랑의 불시착 - 연극 버전
+### 3. [사랑의 불시착 - 연극 버전](post.html?id=2025-10-31-사랑의불시착)
 **충무아트센터 | 2025.11.15 - 2026.01.15**
+
+![사랑의 불시착 포스터](images/posts/crash-landing.jpg)
 
 인기 드라마를 무대로 옮긴 로맨틱 코미디. 드라마를 함께 봤던 커플이라면 더욱 특별한 경험이 될 것입니다.
 
@@ -68,6 +74,8 @@ related_posts: ["post-003", "post-006", "post-008"]
 ### 4. 라이어
 **대학로 자유극장 | 상시 공연**
 
+![라이어 포스터](images/posts/liar.jpg)
+
 20년 넘게 사랑받아온 대학로 대표 코미디. 처음 만나는 커플도 편하게 즐길 수 있습니다.
 
 **데이트 포인트:**
@@ -84,6 +92,8 @@ related_posts: ["post-003", "post-006", "post-008"]
 
 ### 5. 김종욱 찾기
 **대학로 동숭아트센터 | 상시 공연**
+
+![김종욱 찾기 포스터](images/posts/finding-kim-jong-wook.jpg)
 
 로맨틱 코미디의 정석. 달달한 연애 감정을 느끼고 싶은 커플에게 추천합니다.
 
