--- a/posts/2025-10-25-시카고.md
+++ b/posts/2025-10-25-시카고.md
@@ -9,59 +9,27 @@ excerpt: "1920년대 시카고를 배경으로 한 화려한 재즈 뮤지컬"
 tags: ["뮤지컬", "재즈", "범죄"]
 ---
 
-# 시카고 - 재즈와 범죄의 향연
+시카고 보고 왔는데 진짜 명작은 명작이구나 싶었어요. 브로드웨이 최장기 롱런 작품이라는 타이틀이 괜히 있는 게 아니더라구요.
 
-## 공연 소개
+All That Jazz로 시작하는 오프닝부터 압도당함. 록시 역할 아이비 배우가 진짜 미쳤어요. 연기도 연기지만 춤까지 완벽. 밥 포시 안무 특유의 각진 동작이랑 섹시한 느낌을 정말 잘 살림.
 
-1920년대 시카고의 어두운 이면을 그린 **시카고**가 디큐브아트센터에서 공연됩니다. 브로드웨이 최장기 공연 기록을 보유한 이 작품은 섹시하고 위트 있는 스토리로 전 세계 관객들을 매료시켜 왔습니다.
+Cell Block Tango는 진짜 레전드 넘버죠. 6명의 여자 살인범들이 자기가 왜 죽였는지 하나씩 이야기하는데 무대 구성도 미쳤고 음악도 중독성 쩔어요. 이 장면 하나만으로도 티켓값 하는 듯. 공연 끝나고도 계속 머릿속에 맴돎ㅋㅋ "He had it coming~" 이 가사가 자꾸 생각나요.
 
-## 작품의 특징
+벨마 켈리 역할은 최정원 배우 캐스팅으로 봤는데 목소리 진짜 좋더라구요. 록시랑 대립 구도 긴장감 넘치고. 두 배우 케미가 정말 좋았어요.
 
-### 1. 중독성 있는 재즈 넘버
-- "All That Jazz"
-- "Cell Block Tango"
-- "Razzle Dazzle"
+무대 세트가 되게 미니멀한데 오히려 그게 더 좋음. 화려한 배경 없이 배우들 연기랑 밴드 연주에 집중하게 만드는 연출이 작품의 본질을 잘 살리는 것 같아요. 밴드가 무대 위에서 직접 연주하는 것도 라이브 느낌 제대로.
 
-밥 포시의 안무와 존 칸더의 음악이 만들어낸 완벽한 조화를 경험하세요.
+Razzle Dazzle 넘버에서 빌리 플린이 언론 플레이하는 장면도 진짜 풍자 제대로 돼 있어요. 지금 봐도 완전 현대 사회 얘기 같음. 이게 1975년 작품인데도 여전히 유효한 메시지라는 게 신기해요.
 
-### 2. 블랙 코미디의 정수
-살인범들이 스타가 되는 아이러니한 사회를 풍자하는 날카로운 시선이 돋보입니다.
+**공연 정보**
+기간: 2025.11.15 - 2026.02.28
+장소: 디큐브아트센터
+가격: VIP 15만원 / R석 12만원 / S석 9만원
 
-### 3. 미니멀한 무대 연출
-화려한 세트 대신 배우들의 연기와 안무에 집중한 연출이 작품의 메시지를 더욱 강렬하게 전달합니다.
+평일 마티네는 30% 할인되니까 시간 되시는 분들은 그때 가면 좋을 듯. 디큐브는 신도림역에서 가깝고 주차도 편해요.
 
-## 캐스팅
+참고로 19금이에요! 성인용 뮤지컬이라 청소년은 못 봄. 범죄 관련 내용이고 선정적인 안무도 있어서 그런 듯.
 
-- **록시 하트 역**: 아이비, 민경아
-- **벨마 켈리 역**: 최정원, 전소리
-- **빌리 플린 역**: 정성화, 한지상
+⭐️ 평점: 4.5/5
 
-## 관람 포인트
-
-1. **"Cell Block Tango"**: 6명의 살인범들이 자신의 범죄를 고백하는 명장면
-2. **밥 포시 안무**: 특유의 각진 동작과 섹시한 안무
-3. **블랙 유머**: 사회를 향한 신랄한 풍자
-
-## 티켓 정보
-
-- **가격**: VIP석 150,000원 / R석 120,000원 / S석 90,000원
-- **할인**: 평일 마티네 30% 할인
-- **예매처**: 인터파크, 티켓링크
-
-## 추천 대상
-
-- 재즈 음악을 좋아하는 분
-- 독특한 스토리를 선호하는 분
-- 밥 포시의 안무를 감상하고 싶은 분
-- 성인 관객 (청소년 관람불가)
-
-## 관람 후기
-
-화려한 재즈 넘버와 중독성 있는 안무가 인상적입니다. 특히 "Cell Block Tango"는 공연이 끝난 후에도 계속 생각나는 명장면입니다. 사회 풍자적인 메시지도 현대 사회에 여전히 유효해 보입니다.
-
-⭐️ **평점**: 4.5/5
-
----
-
-*이 공연은 청소년 관람불가 작품입니다. 2025년 11월 15일부터 2026년 2월 28일까지 디큐브아트센터에서 만나보실 수 있습니다.*
-
+재즈 좋아하시는 분, 강렬한 여성 캐릭터 좋아하시는 분들한테 강추. 밥 포시 안무 보고 싶으면 무조건 가야 함. 계속 재공연하는 데는 다 이유가 있어요!
