--- a/posts/2025-10-30-햄릿.md
+++ b/posts/2025-10-30-햄릿.md
@@ -5,84 +5,31 @@ category: "연극"
 image: "images/posts/hamlet.jpg"
 venue: "대학로 예술마당"
 period: "2025.11.05 - 2025.12.20"
-excerpt: "셰익스피어의 고전을 현대적 감각으로 재해석한 실험적 작품"
+excerpt: "셰익스피어의 고전을 현대적 감각으로 재해석한 작품"
 tags: ["연극", "고전", "현대극"]
 ---
 
-# 햄릿 - 현대적 재해석
+대학로에서 햄릿 보고 왔어요. 현대적으로 재해석한 버전이라 궁금했거든요.
 
-## 공연 소개
+솔직히 셰익스피어 작품은 좀 어렵고 지루할까봐 걱정했는데 완전 기우였어요. 현대적 연출로 되게 신선하게 다가왔음. 무대도 미니멀하고 의상도 현대복이라 친근한 느낌.
 
-셰익스피어의 4대 비극 중 하나인 **햄릿**을 현대적 감각으로 재해석한 작품이 대학로 예술마당에서 공연됩니다. 고전의 깊이는 유지하면서도 현대 관객들이 공감할 수 있는 신선한 연출이 돋보입니다.
+"To be or not to be" 대사 나올 때 진짜 소름 돋았어요. 다들 아는 그 유명한 대사잖아요. 배우분이 진짜 고뇌하는 느낌 그대로 전달되더라구요. 햄릿 역할 배우분 연기력 미쳤어요.
 
-## 작품의 특징
+오필리아 캐릭터도 재밌게 재해석했더라구요. 원작보다 좀 더 주체적인 느낌? 광기 어린 장면도 되게 인상적이었어요. 여배우분 연기도 진짜 좋았어요.
 
-### 1. 현대적 무대 연출
-전통적인 중세 배경 대신 현대적 미니멀 무대를 사용하여 작품의 본질에 집중합니다. 영상과 조명을 활용한 실험적 연출이 인상적입니다.
+극 중 극 장면도 진짜 재밌었어요. 햄릿이 클로디어스를 시험하려고 연극을 준비하는 그 장면. 무대 위에서 또 연극을 하는 메타적인 구조가 흥미로웠음.
 
-### 2. 젊은 배우들의 열정
-신진 배우들의 에너지 넘치는 연기가 고전에 새로운 생명력을 불어넣습니다.
+무대 연출이 되게 상징적이에요. 미니멀한데 의미는 꽉 찬 느낌? 조명 쓰는 것도 되게 효과적이었고. 소극장이라 배우들이랑 가깝게 볼 수 있는 것도 좋았어요.
 
-### 3. 현대적 대사 해석
-원작의 의미를 살리면서도 현대 관객이 이해하기 쉬운 언어로 재구성했습니다.
+**공연 정보**
+기간: 2025.11.05 - 2025.12.20
+장소: 대학로 예술마당
+가격: 전석 4만원
 
-## 스토리
+소극장이라 가격도 부담 없고 좋아요. 대학로라 주변에 맛집도 많고 데이트 코스로도 괜찮음. 혜화역에서 가까워서 찾기 쉬워요.
 
-덴마크의 왕자 햄릿은 아버지의 유령으로부터 자신의 죽음이 숙부 클로디어스의 계획적 살인이었다는 사실을 듣게 됩니다. 복수와 광기, 사랑과 배신이 얽힌 이야기가 펼쳐집니다.
+러닝타임이 2시간 좀 넘는데 인터미션 없이 쭉 가니까 미리 화장실 다녀오세요ㅋㅋ
 
-"To be, or not to be" - 이 유명한 독백을 통해 햄릿은 삶과 죽음, 존재의 의미에 대해 고민합니다.
+⭐️ 평점: 4/5
 
-## 캐스팅
-
-- **햄릿 역**: 이동욱, 김민재
-- **오필리아 역**: 박소담, 김혜윤
-- **클로디어스 역**: 박호산
-- **거트루드 역**: 김영애
-
-## 관람 포인트
-
-1. **"To be, or not to be" 독백**: 햄릿의 실존적 고민이 담긴 명장면
-2. **극중극 장면**: 햄릿이 왕의 죄를 폭로하기 위해 준비한 연극
-3. **오필리아의 광기**: 사랑과 배신으로 인한 비극적 장면
-4. **결투 장면**: 긴장감 넘치는 클라이맥스
-
-## 티켓 정보
-
-- **가격**: R석 50,000원 / S석 40,000원 / A석 30,000원
-- **할인**: 평일 20% 할인, 학생 30% 할인
-- **예매처**: 인터파크, 플레이티켓
-
-## 추천 대상
-
-- 고전 문학을 좋아하는 분
-- 실험적 연극에 관심 있는 분
-- 대학로 소극장 공연을 즐기는 분
-- 깊이 있는 대화를 나누고 싶은 커플
-
-## 관람 팁
-
-1. **좌석**: 소극장이므로 어느 좌석에서든 무난하게 관람 가능합니다.
-2. **관람 시간**: 약 2시간 (인터미션 없음)
-3. **복장**: 편안한 복장으로 관람하세요.
-4. **공연 후**: 근처 카페에서 작품에 대해 이야기 나누기 좋습니다.
-
-## 연출가 노트
-
-"햄릿의 고민은 400년이 지난 지금도 여전히 유효합니다. 우리는 이 작품을 통해 현대인의 실존적 고뇌를 이야기하고자 합니다. 복수와 정의, 사랑과 배신, 그리고 존재의 의미에 대한 질문은 시대를 초월합니다."
-
-## 총평
-
-현대적 감각으로 재해석된 **햄릿**은 고전의 무게감과 현대적 감성이 조화를 이룬 수작입니다. 합리적인 가격에 수준 높은 연극을 감상할 수 있어 대학로 공연의 진가를 느낄 수 있습니다.
-
-⭐️ **평점**: 4.5/5
-
-## 주차 및 교통
-
-- **지하철**: 4호선 혜화역 2번 출구 도보 5분
-- **주차**: 마로니에 공원 지하 주차장 이용
-- **주변**: 공연 전후 대학로 카페 거리 탐방 추천
-
----
-
-*이 공연은 2025년 11월 5일부터 12월 20일까지 대학로 예술마당에서 만나보실 수 있습니다. 고전의 깊이와 현대적 감성이 만나는 특별한 경험을 놓치지 마세요!*
-
+셰익스피어 작품 처음 보시는 분들한테도 추천. 현대적 연출이라 부담 없이 볼 수 있어요. 연극 좋아하시는 분들은 꼭 가보세요!
