--- a/posts/2025-10-31-사랑의불시착.md
+++ b/posts/2025-10-31-사랑의불시착.md
@@ -2,92 +2,34 @@
 title: "사랑의 불시착 - 연극 버전"
 date: 2025-10-31
 category: "연극"
-image: "images/posts/crash-landing.jpg"
+image: "images/posts/crashlanding.jpg"
 venue: "충무아트센터"
 period: "2025.11.15 - 2026.01.15"
-excerpt: "인기 드라마를 무대로 옮긴 로맨틱 코미디"
+excerpt: "인기 드라마를 무대 위로 옮긴 로맨틱 코미디"
 tags: ["연극", "로맨스", "코미디"]
 ---
 
-# 사랑의 불시착 - 연극 버전
+사랑의 불시착 연극 버전 보고 왔어요! 드라마 진짜 재밌게 봤었거든요. 연극으로는 어떨까 궁금했는데 기대 이상이었음 ㅎㅎ
 
-## 공연 소개
+드라마 팬이라면 진짜 재밌게 볼 수 있어요. 유명한 장면들 다 나와요. "리정혁~" 하는 장면도 있고ㅋㅋ 드라마 봤던 분들은 아 이 장면! 하면서 즐기실 듯.
 
-전 세계를 사로잡은 드라마 **사랑의 불시착**이 무대 위에서 새롭게 태어났습니다. 원작의 감동과 재미는 그대로 살리면서 무대만의 특별한 매력을 더한 로맨틱 코미디입니다.
+물론 드라마 전체를 다 담을 순 없으니까 주요 장면 위주로 각색했더라구요. 근데 핵심은 다 살아있어요. 유세리가 북한에 불시착해서 리정혁을 만나고 사랑에 빠지는 과정이 잘 표현됨.
 
-## 작품의 매력
+중대 아저씨들 케미도 좋아요ㅋㅋㅋ 표치수, 김주먹, 김은동, 방동국 이 4명이 진짜 웃김 담당. 코믹한 장면들이 많아서 객석 분위기 진짜 좋았어요.
 
-### 1. 익숙하지만 새로운 스토리
-드라마 팬들에게는 향수를, 처음 접하는 관객에게는 신선함을 선사합니다. 무대 연출을 통해 원작과는 다른 감동을 느낄 수 있습니다.
+배우분들도 다 캐릭터를 잘 살리심. 유세리 역할 배우분은 되게 당차고 귀여운 느낌이 잘 나왔고, 리정혁 역할은 무뚝뚝하면서도 따뜻한 느낌 제대로. 서단 역할도 짜증나게(?) 잘 하시더라구요ㅋㅋ
 
-### 2. 코미디와 로맨스의 완벽한 조화
-북한 주민들의 순수함과 남북의 문화 차이에서 오는 유머, 그리고 리정혁과 윤세리의 애틋한 사랑이 균형있게 그려집니다.
+무대 세트는 간결한데 장면 전환이 매끄러워요. 북한이랑 서울 오가는 장면들이 자연스럽게 이어짐. 영상도 효과적으로 사용해서 몰입도 높았어요.
 
-### 3. 무대만의 특별함
-드라마에서는 볼 수 없었던 배우들의 생생한 연기와 관객과의 교감이 특별한 경험을 만듭니다.
+**공연 정보**
+기간: 2025.11.15 - 2026.01.15
+장소: 충무아트센터
+가격: R석 8만원 / S석 6만원 / A석 4만원
 
-## 스토리
+충무아트센터는 동대문역사문화공원역이랑 가까워요. 주차도 되고 접근성 좋음. 드라마 팬들 많이 오셔서 분위기 되게 좋았어요.
 
-재벌 상속녀 윤세리는 패러글라이딩 중 돌풍을 만나 북한에 불시착합니다. 그곳에서 만난 북한 장교 리정혁. 그를 만나면서 세리의 인생에 예상치 못한 변화가 시작됩니다. 국경을 넘은 사랑, 그리고 함께한 사람들의 따뜻한 우정이 감동을 선사합니다.
+데이트로도 완전 추천! 로맨틱 코미디라 가볍게 즐기기 좋아요. 드라마 같이 봤던 커플이면 더 재밌게 볼 수 있을 듯.
 
-## 캐스팅
+⭐️ 평점: 4/5
 
-- **윤세리 역**: 서현진, 김지원
-- **리정혁 역**: 지창욱, 박해진
-- **서단 역**: 이신영
-- **구승준 역**: 김정현
-- **표치수 역**: 양경원
-
-## 관람 포인트
-
-1. **첫 만남 장면**: 패러글라이딩으로 불시착하는 세리와 리정혁의 운명적 만남
-2. **5호 아줌마들**: 북한 마을 아줌마들의 유쾌한 입담
-3. **피아노 연주 장면**: 리정혁의 감성적인 피아노 연주
-4. **국경을 넘는 사랑**: 애틋하고 감동적인 러브 스토리
-
-## 티켓 정보
-
-- **가격**: VIP석 99,000원 / R석 77,000원 / S석 55,000원
-- **할인**: 커플 할인 20%, 평일 마티네 30% 할인
-- **예매처**: 인터파크, 예스24, 티켓링크
-
-## 추천 대상
-
-- 드라마 '사랑의 불시착' 팬
-- 로맨틱 코미디를 좋아하는 분
-- 데이트 코스를 찾는 커플
-- 가벼운 마음으로 즐길 수 있는 공연을 원하는 분
-
-## 드라마와의 차이점
-
-무대 연극으로 각색되면서 핵심 스토리에 집중하고, 무대 연출의 특성을 살린 새로운 장면들이 추가되었습니다. 특히 배우들의 라이브 연기와 즉흥적인 애드립이 매 공연마다 새로운 재미를 선사합니다.
-
-## 관람 팁
-
-1. **좌석 선택**: 1층 중앙 또는 2층 전면 추천
-2. **관람 시간**: 약 2시간 20분 (인터미션 포함)
-3. **드라마 시청**: 드라마를 미리 보면 더욱 재미있지만, 보지 않아도 충분히 즐길 수 있습니다.
-4. **데이트 코스**: 공연 후 충무로 먹자골목에서 식사 추천
-
-## 관객 반응
-
-"드라마의 감동을 무대에서 다시 느낄 수 있어서 좋았어요. 배우들의 생생한 연기가 인상적이었습니다!"
-
-"드라마를 안 봤는데도 충분히 재미있었어요. 무대 연출이 창의적이고 배우들의 케미가 좋았습니다."
-
-## 총평
-
-**사랑의 불시착 - 연극 버전**은 원작의 매력을 잘 살리면서도 무대만의 특별함을 더한 작품입니다. 웃음과 감동, 그리고 따뜻한 메시지가 있는 이 작품은 연인, 가족, 친구와 함께 즐기기 좋은 공연입니다.
-
-⭐️ **평점**: 4.5/5
-
-## 주차 및 교통
-
-- **지하철**: 3호선, 4호선 충무로역 8번 출구 연결
-- **주차**: 충무아트센터 지하 주차장 (공연 관람객 3시간 무료)
-- **버스**: 충무로 정류장 하차
-
----
-
-*이 공연은 2025년 11월 15일부터 2026년 1월 15일까지 충무아트센터에서 만나보실 수 있습니다. 국경을 넘은 사랑 이야기를 무대에서 만나보세요!*
-
+드라마 팬이라면 무조건 추천. 안 봤어도 충분히 재밌어요. 웃음 포인트도 많고 감동도 있고. 가볍게 즐기기 딱 좋은 작품!
